// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Factory component render should render a sizes query component 1`] = `
<Form>
  <SizesQuery
    Component={[Function]}
    ErrorWrapper={[Function]}
    LoadingWrapper={[Function]}
  />
  <ButtonsContainer>
    <Button
      bgColour="dark blue"
      colour="white"
      disabled={true}
      labelColour="turquoise"
      type="submit"
    >
      Add to cart
    </Button>
  </ButtonsContainer>
</Form>
`;

exports[`Factory component render should render an ingredient query component if size value is truthy 1`] = `
<Form>
  <SizesQuery
    Component={[Function]}
    ErrorWrapper={[Function]}
    LoadingWrapper={[Function]}
  />
  <IngredientsQuery
    Component={[Function]}
    ErrorWrapper={[Function]}
    LoadingWrapper={[Function]}
    setFieldValue={[MockFunction]}
    size="LARGE"
  />
  <ButtonsContainer>
    <Button
      bgColour="dark blue"
      colour="white"
      disabled={true}
      labelColour="turquoise"
      type="submit"
    >
      Add to cart
    </Button>
  </ButtonsContainer>
</Form>
`;

exports[`Factory component render should render computed price if base price value is bigger than zero 1`] = `
<Form>
  <SizesQuery
    Component={[Function]}
    ErrorWrapper={[Function]}
    LoadingWrapper={[Function]}
  />
  <IngredientsQuery
    Component={[Function]}
    ErrorWrapper={[Function]}
    LoadingWrapper={[Function]}
    setFieldValue={[MockFunction]}
    size="LARGE"
  />
  <ButtonsContainer>
    <Button
      bgColour="dark blue"
      colour="white"
      disabled={true}
      labelColour="turquoise"
      type="submit"
    >
      Add to cart
      <span>
        10.6
      </span>
    </Button>
  </ButtonsContainer>
</Form>
`;
